Completed https://github.com/orientechnologies/orientdb-studio/issues/353  with hover message

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -872,7 +872,9 @@ ul.arrayrid > li {
   right: 2px;
   position: absolute;
 }
-
+.btn-disabled {
+  cursor: not-allowed;
+}
 .circle-container {
   position: absolute;
   top: 40%;
