Removed Password Hint https://github.com/orientechnologies/orientdb/issues/6517

--- a/app/views/database/newDatabase.html
+++ b/app/views/database/newDatabase.html
@@ -74,11 +74,11 @@
 
           </fieldset>
         </form>
-        <div>
-          You can find the server credentials in $ORIENTDB_HOME/config/orientdb-server-config.xml file:
-                    <pre>&lt;users&gt;<br/>&nbsp;&nbsp;&lt;user name="root" password="pwd" resources="*" /&gt;<br/>&lt;/users&gt;
-                    </pre>
-        </div>
+        <!--<div>-->
+          <!--You can find the server credentials in $ORIENTDB_HOME/config/orientdb-server-config.xml file:-->
+                    <!--<pre>&lt;users&gt;<br/>&nbsp;&nbsp;&lt;user name="root" password="pwd" resources="*" /&gt;<br/>&lt;/users&gt;-->
+                    <!--</pre>-->
+        <!--</div>-->
         <div class="progress progress-striped active" ng-show="creating">
           <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                aria-valuemax="100" style="width: 100%">
