- Public Issue Mute Configuration - Login Impossible for Not Registered Users - Some minor UI Improvements

--- a/orientechnologies-website/src/main/webapp/views/clients/editClient.html
+++ b/orientechnologies-website/src/main/webapp/views/clients/editClient.html
@@ -108,7 +108,15 @@
                   <tbody>
                   <tr ng-repeat="member in members">
                     <td>
-                      <avatar dim="50" name="true" user="member"></avatar>
+                      <avatar dim="50" name="true" user="member">
+
+                      </avatar>
+
+                      <a href="javascript:void(0)" ng-click="removeMember(member)">
+                        <i class="fa fa-remove ">
+
+                        </i>
+                      </a>
                     </td>
                   </tr>
                   </tbody>
