--- a/orientechnologies-website/src/main/webapp/views/users/profile.html
+++ b/orientechnologies-website/src/main/webapp/views/users/profile.html
@@ -53,7 +53,7 @@
         <label for="inputNotification" class="col-sm-2 control-label">Participating Notification</label>
 
         <div class="col-sm-8">
-          <input type="checkbox" class="form-control" id="inputNotification"  ng-model="user.notification"
+          <input type="checkbox" class="form-control" id="inputNotification" ng-model="user.notification"
                  placeholder="Company Name">
         </div>
       </div>
@@ -61,7 +61,16 @@
         <label for="inputWatching" class="col-sm-2 control-label">Watching Notification</label>
 
         <div class="col-sm-8">
-          <input type="checkbox" class="form-control" id="inputWatching"  ng-model="user.watching"
+          <input type="checkbox" class="form-control" id="inputWatching" ng-model="user.watching"
+                 placeholder="Company Name">
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="inputMute" class="col-sm-2 control-label">Mute Public Issue Notification</label>
+
+        <div class="col-sm-8">
+          <input type="checkbox" class="form-control" id="inputMute" ng-model="user.publicMute"
                  placeholder="Company Name">
         </div>
       </div>
@@ -69,7 +78,7 @@
         <label for="inputChat" class="col-sm-2 control-label">Chat Notification</label>
 
         <div class="col-sm-8">
-          <input type="checkbox" class="form-control" id="inputChat"  ng-model="user.chatNotification"
+          <input type="checkbox" class="form-control" id="inputChat" ng-model="user.chatNotification"
                  placeholder="Company Name">
         </div>
       </div>
