Small Fixes on Chart

--- a/app/views/server/distributed/overview.html
+++ b/app/views/server/distributed/overview.html
@@ -56,7 +56,7 @@
               </a>
             </div>
             <div class="col-md-6">
-              <b>CRUD Ops:</b> {{operations}} /s
+              <b> Operations:</b> {{operations}} /s
             </div>
           </div>
 
@@ -82,7 +82,7 @@
     <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <b> Cluster CRUD Operations / Sec</b>
+          <b> Cluster Operations / Sec</b>
         </div>
         <div class="panel-body">
           <!--<div id="orientdb-cluster" c3chart></div>-->
