--- a/app/views/server/stats/stats.html
+++ b/app/views/server/stats/stats.html
@@ -56,7 +56,7 @@
               </a>
             </div>
             <div class="col-md-6">
-              <b>CRUD Ops</b> {{operations}} /s</span>
+              <b>Operations:</b> {{operations}} /s</span>
             </div>
           </div>
 
