--- a/app/views/server/distributed/singleDB.html
+++ b/app/views/server/distributed/singleDB.html
@@ -95,12 +95,21 @@
           <div class="col-md-6">
             <form class="form-horizontal">
               <div class="form-group">
-                <label class="control-label col-md-2">Server Roles</label>
-                <div class="col-md-10">
+
+                <!--<label class="control-label col-md-2">Servers </label>-->
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <b>Servers</b>
+                  </div>
+                  <div class="panel-body">
+                  </div>
+
                   <table class=" table table-striped  table-hover table-condensed ">
                     <thead>
                     <tr>
                       <th>Server</th>
+                      <th>Status</th>
                       <th>Role
                         <a href="javascript:void(0)" tabindex="1"
                            data-trigger="focus" data-placement="right"
@@ -109,6 +118,7 @@
                           <i class="fa fa-question-circle"></i>
                         </a>
                       </th>
+                      <th>Actions</th>
                     </tr>
 
                     </thead>
@@ -118,11 +128,37 @@
                       <td>
                         <a href="#/dashboard/general/{{s.name}}">{{s.name}}</a>
                       </td>
+                      <th>{{s.status}}</th>
                       <td>
                         <select class="form-control" ng-model="calculatedRoles[s.name]"
                                 ng-options="role for role in roles"></select>
                       </td>
+                      <td>
+                        <div class="btn-toolbar">
+                          <div class="btn-group">
+                            <button class="btn btn-xs btn-danger" ng-click="removeServer(s)"
+                                    data-trigger="hover" data-placement="top"
+                                    data-container="body"
+                                    bs-tooltip="removeServerTooltip"
+                            ><span
+                              class="fa fa-remove pointer"></span>
+                            </button>
+                          </div>
+
+                          <div class="btn-group">
+                            <button class="btn btn-xs btn-default" ng-click="syncDatabase(s)"
+                                    data-trigger="hover" data-placement="top"
+                                    data-container="body"
+                                    bs-tooltip="syncDatabaseTooltip"
+                            ><span
+                              class="fa fa-refresh pointer"></span>
+                            </button>
+                          </div>
+                        </div>
+
+                      </td>
                     </tr>
+
                     </tbody>
                   </table>
                 </div>
@@ -173,8 +209,19 @@
               </select>
             </td>
             <td ng-repeat="s in servers">
-              <!--<i class="fa fa-check" ng-show="isClusterInNode(key,s.name)"></i>-->
-              <span> {{ getOwnership(key,s.name) }}</span>
+
+              <div class="col-md-4">
+                <span> {{ getOwnership(key,s.name) }}</span>
+              </div>
+              <div class="col-md-8">
+                <div class="btn-toolbar pull-right">
+                  <div class="btn-group">
+                    <button class="btn btn-sm btn-default" ng-click="syncCluster(key,s.name)">
+                      <i class="fa fa-refresh"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
             </td>
           </tr>
           </tbody>
