Fixes https://github.com/orientechnologies/orientdb/issues/6840

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -688,6 +688,9 @@ ul.arrayrid > li {
   font-weight: 700;
   text-transform: uppercase;
 }
+.navbar .nav > li.user > a {
+  text-transform: none;
+}
 
 .container-notification {
   position: fixed;
