--- a/app/views/server/stats/distributed.html
+++ b/app/views/server/stats/distributed.html
@@ -14,7 +14,8 @@
     <div class="col-md-12">
       <tabset>
         <tab title="Overview" template-url="views/server/distributed/overview.html"></tab>
-        <tab title="Databases" template-url="views/server/distributed/databases.html"></tab>
+        <tab title="Data Centers" template-url="views/server/distributed/dataCenters.html"></tab>
+        <tab title="Databases Cfg" template-url="views/server/distributed/databases.html"></tab>
       </tabset>
     </div>
   </div>
